--- a/test.html
+++ b/test.html
@@ -31,6 +31,36 @@
       </div>
     </nav>
 
+    <section class="first-section">
+      <img src="img/happy.jpg" alt="">
+      <div class="welcome">
+        <div class="welcome-message">
+          <span class="big-message">The voice of youth</span> <br>
+          <span class="small-message">Persons of Distinction do not fear failure, but rather learn from it</span>
+          <div class="btnGo">
+          </div>
+        </div>
+
+      </div>
+
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#ffffff" fill-opacity="1" d="M0,160L48,133.3C96,107,192,53,288,69.3C384,85,480,171,576,192C672,213,768,171,864,176C960,181,1056,235,1152,250.7C1248,267,1344,245,1392,234.7L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+        </path>
+      </svg>
+      <div class="btnGo" align="center">
+        <a class="btn" href="#">Let's Go!</a> <br>
+        <div class="arrow" align="center">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+
+    </section>
+    <style media="screen">
+
+    </style>
+    hh
     <script src="js/youth.js" charset="utf-8"></script>
   </body>
 </html>
