--- a/test.html
+++ b/test.html
@@ -44,11 +44,11 @@
       </div>
 
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#ffffff" fill-opacity="1" d="M0,160L48,133.3C96,107,192,53,288,69.3C384,85,480,171,576,192C672,213,768,171,864,176C960,181,1056,235,1152,250.7C1248,267,1344,245,1392,234.7L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+        <path fill="#fbfbfb" fill-opacity="1" d="M0,160L48,133.3C96,107,192,53,288,69.3C384,85,480,171,576,192C672,213,768,171,864,176C960,181,1056,235,1152,250.7C1248,267,1344,245,1392,234.7L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
         </path>
       </svg>
       <div class="btnGo" align="center">
-        <a class="btn" href="#">Let's Go!</a> <br>
+        <a class="btn" href="#second-section">Let's Go!</a> <br>
         <div class="arrow" align="center">
           <span></span>
           <span></span>
@@ -57,10 +57,45 @@
       </div>
 
     </section>
-    <style media="screen">
+    <section class="second-section" id="second-section">
+      <div class="left-section">
+        <img class="left-image" src="img/man.png" alt=""> <br>
+        <div class="" align = "right">
+          <a href="#" class="btnAbout">
+            <span class="btnTxt">About us</span>
+            <img id="white-arrow" src="img/w-right-arrow.svg" alt="">
+          </a>
+        </div>
+      </div>
+      <div class="right-section" align="left">
+        <span class="bigText" style="position: relative;">Develop</span>
+        <span class="medText">Developing future leaders</span> <br>
+        <span class="smallText">
+          Youth in action Zim shapes the minds of young Zimbabwe people into people who are self dependent, confident and
+           can set achievable proffessional goals.
+        </span> <br>
 
-    </style>
-    hh
+        <span class="smallText" >
+            The youth in Zimbabwe are:
+        </span>
+        <div class="smallText" >
+            <div class="dot1"></div> <span>Inteligent</span>
+        </div>
+        <div class="smallText" >
+            <div class="dot2"></div> <span>Cultured</span>
+        </div>
+        <div class="smallText" >
+            <div class="dot3"></div> <span>Innovative</span>
+        </div>
+        <span class="smallText" >
+            These are qualities that need nurtured and cultivated
+        </span>
+      </div>
+      <style media="screen">
+
+      </style>
+    </section>
+
     <script src="js/youth.js" charset="utf-8"></script>
   </body>
 </html>
