--- a/test.html
+++ b/test.html
@@ -93,9 +93,146 @@
       </div>
       <style media="screen">
 
+
       </style>
     </section>
+    <section class="third-section" style="background-image: url('img/wave.svg'); background-size: cover;">
+      <!--<img class="third-background" src="img/wave.svg" alt="">-->
+      <div class="third-holder">
+        <div class="medium-label" align="left" id="blue-label">
+          <div class="right-label">
+            <span class="bold-label">Top</span> &nbsp;<span class="regular-label">Stories</span>
+          </div>
+          <div class="center-nothing">
+          </div>
+          <div class="left-button">
+            <a class="blue-more" href="#">
+              <span>More Top Stories</span>
+              <img id="white-arrow" src="img/w-right-arrow.svg" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="top-news" >
+          <div class="big-card" id="card1">
+            <div class="card-overlay" align="left">
+              <span class="medium-title">Upcoming young talent in music</span>
+            </div>
+              <img class="card-image" src="img/rasta.jpg" alt="">
+          </div>
+          <div class="small-card" id="card2">
+            <div class="card-overlay" align="left">
+              <span class="small-title">Work for your goal </span>
+            </div>
+            <img class="card-image" src="img/shoes.jpg" alt="">
+          </div>
+          <div class="small-card" id="card3">
+            <div class="card-overlay" align="left">
+              <span class="small-title">Involve youth in politics</span>
+            </div>
+            <img class="card-image" src="img/barry.jpg" alt="">
+          </div>
 
+        </div>
+        <div id="left-button">
+          <a class="blue-more" href="#">
+            <span>More Top Stories</span>
+            <img id="white-arrow" src="img/w-right-arrow.svg" alt="">
+          </a>
+        </div>
+        <div class="medium-label" align="left" id="white-label">
+          <div class="right-label">
+            <span class="bold-label">New</span> &nbsp;<span class="regular-label">Stories</span>
+          </div>
+          <div class="center-nothing">
+          </div>
+          <div class="left-button">
+            <a class="white-more" href="#">
+              <span>More New Stories</span>
+              <img id="white-arrow" src="img/b-right-arrow.svg" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="new-stories">
+          <div class="tiny-card">
+            <div class="tiny-overlay" align="left">
+              <span class="tiny-title">How to be happy always</span>
+            </div>
+            <img class="card-image" src="img/jump.jpg" alt="">
+          </div>
+
+          <div class="tiny-card">
+            <div class="tiny-overlay" align="left">
+              <span class="tiny-title">Invest in your mind</span>
+            </div>
+            <img class="card-image" src="img/you.jpg" alt="">
+          </div>
+
+          <div class="tiny-card">
+            <div class="tiny-overlay" align="left">
+              <span class="tiny-title">Educate vulnerable girls</span>
+            </div>
+            <img class="card-image" src="img/girl.jpg" alt="">
+          </div>
+        </div>
+        <div id="left-button">
+          <a class="white-more" href="#">
+            <span>More New Stories</span>
+            <img id="white-arrow" src="img/b-right-arrow.svg" alt="">
+          </a>
+        </div>
+        <div class="share" align="center">
+          <div class="descriptor">
+            <span class="small-descriptor">You can help you know!</span>
+            <span class="tiny-descriptor">Spread the word. Let the world know about us</span>
+          </div>
+          <div class="share-btn" align="center">
+            <div class="btn_wrap">
+              <span class="btn-descriptor">Share</span>
+              <div class="container">
+                <a class="social-media" target="_blank"  href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fclinsm.github.io%2Fyiaz%2F&amp;src=sdkpreparse">
+                  <img src="img/facebook.svg" alt="fb">
+                </a>
+                <a class="social-media" target="_blank"  href="https://www.instagram.com">
+                  <img src="img/instagram.svg" alt="insta">
+                </a>
+                <a class="social-media" target="_blank" href="https://twitter.com/share?ref_src=twsrc%5Etfw">
+                  <img src="img/twitter.svg" alt="tweet">
+                </a>
+                <a class="social-media" target="_blank"  href="https://www.tumblr.com">
+                  <img src="img/tumblr.svg" alt="tumblr">
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <footer>
+        <div class="" id="large">
+          <span class="footer-descriptor">&copy; Yiaz logo</span>
+        </div>
+
+        <div class="" id="nothing">
+          <span></span>
+        </div>
+        <div class="footer-card">
+          <a href="#" class="footer-descriptor">Home</a>
+        </div>
+        <div class="footer-card">
+          <a href="#" class="footer-descriptor">Shop</a>
+        </div>
+        <div class="footer-card">
+          <a href="#" class="footer-descriptor">About</a>
+        </div>
+        <div class="footer-card">
+          <a href="#" class="footer-descriptor">Stories</a>
+        </div>
+      </footer>
+    </section>
+    <style media="screen">
+    /*test
+
+    */
+    </style>
     <script src="js/youth.js" charset="utf-8"></script>
   </body>
 </html>
