--- a/test.html
+++ b/test.html
@@ -11,6 +11,42 @@
   <body>
     <nav>
       <div class="logo">
+        Yiaz logo
+      </div>
+      <div class="nav-buttons">
+        <a href="#">shop</a>
+        <a href="#">stories</a>
+        <a href="#">about</a>
+        <a href="#">profile</a>
+      </div>
+      <div id="menu" class="burgerMenu"  align="right">
+        <div id="burger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+        <div class="stacked-nav-wrapper" id="nav_wrapper">
+          <div class="stacked-buttons">
+            <a href="#">shop</a>
+            <a href="#">stories</a>
+            <a href="#">about</a>
+            <a href="#">profile</a>
+          </div>
+        </div>
+
+      </div>
+
+    </nav>
+    <style media="screen">
+
+
+    </style>
+    <script type="text/javascript">
+
+    </script>
+    <!--
+    <nav>
+      <div class="logo">
         <h4>the nav</h4>
       </div>
       <ul class="nav-links">
@@ -30,6 +66,7 @@
         <div class="line3"></div>
       </div>
     </nav>
+-->
 
     <section class="first-section">
       <img src="img/happy.jpg" alt="">
@@ -234,5 +271,6 @@
     */
     </style>
     <script src="js/youth.js" charset="utf-8"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
   </body>
 </html>
