--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@
       </div>
       <div class="nav-buttons">
         <a href="#">shop</a>
-        <a href="#">stories</a>
+        <a href="stories.html">stories</a>
         <a href="#">about</a>
         <a href="#">profile</a>
       </div>
@@ -28,7 +28,7 @@
         <div class="stacked-nav-wrapper" id="nav_wrapper">
           <div class="stacked-buttons">
             <a href="#">shop</a>
-            <a href="#">stories</a>
+            <a href="stories.html">stories</a>
             <a href="#">about</a>
             <a href="#">profile</a>
           </div>
