--- a/stories.html
+++ b/stories.html
@@ -41,8 +41,8 @@
     <section class="one" style="">
       <div class="welcome story">
         <div class="stories-welcome">
-          <span class="big-message">The voice of youth</span> <br>
-          <span class="small-message">Persons of Distinction do not fear failure, but rather learn from it</span>
+          <span class="big-message">Stuff we have to say</span> <br>
+          <span class="small-message">Leting it of our chests!</span>
           <div class="btnGo">
           </div>
         </div>
