--- a/about.html
+++ b/about.html
@@ -1,129 +1,177 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-
-  <title>Youth in action Zim</title>
-
-  <!-- Bootstrap core CSS -->
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- Custom fonts for this template -->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-
-  <!-- Custom styles for this template -->
-  <link href="css/clean-blog.min.css" rel="stylesheet">
-
-</head>
-
-<body>
-
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">Yiaz Logo</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menu
-        <i class="fas fa-bars"></i>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="post.html">Sample Post</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Condensed:wght@300&family=Heebo&display=swap" rel="stylesheet">
+    <title>About Us - Youth in action Zim</title>
+    <link href="css/youth.css" rel="stylesheet">
+  </head>
+  <body>
+    <nav>
+      <div class="logo">
+        Yiaz logo
       </div>
-    </div>
-  </nav>
-
-  <!-- Page Header -->
-  <header class="masthead" style="background-image: url('img/about-bg.jpg')">
-    <div class="overlay"></div>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <div class="page-heading">
-            <h1>About Me</h1>
-            <span class="subheading">This is what I do.</span>
+      <div class="nav-buttons">
+        <a href="#">shop</a>
+        <a href="stories.html">stories</a>
+        <a href="about.html">about</a>
+        <a href="#">profile</a>
+      </div>
+      <div id="menu" class="burgerMenu"  align="right">
+        <div id="burger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+        <div class="stacked-nav-wrapper" id="nav_wrapper">
+          <div class="stacked-buttons">
+            <a href="#">shop</a>
+            <a href="stories.html">stories</a>
+            <a href="#">about</a>
+            <a href="#">profile</a>
           </div>
         </div>
+
       </div>
-    </div>
-  </header>
-
-  <!-- Main Content -->
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequuntur magnam, excepturi aliquid ex itaque esse est vero natus quae optio aperiam soluta voluptatibus corporis atque iste neque sit tempora!</p>
+    </nav>
+    <section class="article-section1" style="">
+      <div class="background-words">
+        <span>our youth</span><span>my people</span><span>#rise</span>
+        <span>youth in action</span><span>zimbabwe</span><span>kin</span>
+        <span>young african</span><span>girl child</span><span>protect</span>
+        <span>future</span><span>legacy</span><span>hope</span>
       </div>
-    </div>
-  </div>
+      <div class="welcome-story">
+        <div class="stories-welcome">
+          <span class="big-message">About Us</span> <br>
+          <span class="small-message">The story of who we are, what drives us. Where we are going.</span>
 
-  <hr>
-
-  <!-- Footer -->
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-md-10 mx-auto">
-          <ul class="list-inline text-center">
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fas fa-circle fa-stack-2x"></i>
-                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2020</p>
         </div>
       </div>
-    </div>
-  </footer>
+    </section>
+    <footer>
+      <div class="" id="large">
+        <span class="footer-descriptor">&copy; Yiaz logo</span>
+      </div>
 
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+      <div class="" id="nothing">
+        <span></span>
+      </div>
+      <div class="footer-card">
+        <a href="#" class="footer-descriptor">Home</a>
+      </div>
+      <div class="footer-card">
+        <a href="#" class="footer-descriptor">Shop</a>
+      </div>
+      <div class="footer-card">
+        <a href="#" class="footer-descriptor">About</a>
+      </div>
+      <div class="footer-card">
+        <a href="stories.html" class="footer-descriptor">Stories</a>
+      </div>
+    </footer>
+  </body>
+<style media="screen">
+  .article-section1{
+    color: #FFF;
+  text-align: center;
+  height: 600px;
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  background-image: url('img/rasta.jpg');
+  background-size: cover;
+  position: relative;
+  }
+  .welcome-story{
+    position: absolute;
+    z-index: 2;
+    height: 600px;
+    width: 100%;
+    top: 0;
+  }
+  .stories-welcome{
+    width: 100%;
+    padding: 150px 20%;
+    height: 100%;
+    text-align: center;
+    position: relative;
+    background: rgba(0, 0, 0, 0.5);
 
-  <!-- Custom scripts for this template -->
-  <script src="js/clean-blog.min.js"></script>
-
-</body>
+  }
+  .stories-welcome span:nth-child(1){
+    font-size: 100px;
+  }
+  .background-words{
+    position: absolute;
+    background: black;
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
+  }
+  .background-words span:nth-child(1){
+    font-size: 100px;
+    font-weight: bold;
+    grid-row: span 1 / 3;
+    opacity: 0.1;
+  }
+  .background-words span:nth-child(2){
+    font-size: 50px;
+    font-weight: bold;
+    opacity: 0.3;
+  }
+  .background-words span:nth-child(3){
+    font-size: 50px;
+    font-weight: bold;
+    opacity: 0.2;
+  }
+  .background-words span:nth-child(4){
+    font-size: 200px;
+    font-weight: bold;
+    opacity: 0.25;
+    grid-row: span 5 / 7;
+    line-height: 120px;
+  }
+  /*Zim*/
+  .background-words span:nth-child(5){
+    font-size: 70px;
+    font-weight: bold;
+    opacity: 0.15;
+  }.background-words span:nth-child(6){
+    font-size: 50px;
+    font-weight: bold;
+    opacity: 0.2;
+  }.background-words span:nth-child(7){
+    font-size: 120px;
+    font-weight: bold;
+    opacity: 0.08;
+  }.background-words span:nth-child(8){
+    font-size: 80px;
+    font-weight: bold;
+    opacity: 0.2;
+    grid-row: span 3 / 4;
+  }.background-words span:nth-child(9){
+    font-size: 150px;
+    font-weight: bold;
+    opacity: 0.2;
+  }.background-words span:nth-child(10){
+    font-size: 60px;
+    font-weight: bold;
+    opacity: 0.27;
+    grid-row: span 7 / 8;
+  }.background-words span:nth-child(11){
+    font-size: 50px;
+    font-weight: bold;
+    opacity: 0.2;
+  }.background-words span:nth-child(12){
+    font-size: 250px;
+    font-weight: bold;
+    opacity: 0.1;
+    grid-row: span 1 / 3;
+  }
+</style>
 
 </html>
