--- a/stories.html
+++ b/stories.html
@@ -16,7 +16,7 @@
       <div class="nav-buttons">
         <a href="#">shop</a>
         <a href="stories.html">stories</a>
-        <a href="#">about</a>
+        <a href="about.html">about</a>
         <a href="#">profile</a>
       </div>
       <div id="menu" class="burgerMenu"  align="right">
@@ -29,7 +29,7 @@
           <div class="stacked-buttons">
             <a href="#">shop</a>
             <a href="stories.html">stories</a>
-            <a href="#">about</a>
+            <a href="about.html">about</a>
             <a href="#">profile</a>
           </div>
         </div>
@@ -65,12 +65,12 @@
           </div>
         </div>
         <div class="top-news" >
-          <div class="big-card" id="card1">
+          <a href="article.html" class="big-card" id="card1">
             <div class="card-overlay" align="left">
               <span class="medium-title">Upcoming young talent in music</span>
             </div>
               <img class="card-image" src="img/rasta.jpg" alt="">
-          </div>
+          </a>
           <div class="small-card" id="card2">
             <div class="card-overlay" align="left">
               <span class="small-title">Work for your goal </span>
@@ -109,10 +109,10 @@
           <a href="#" class="footer-descriptor">Shop</a>
         </div>
         <div class="footer-card">
-          <a href="#" class="footer-descriptor">About</a>
+          <a href="about.html" class="footer-descriptor">About</a>
         </div>
         <div class="footer-card">
-          <a href="#" class="footer-descriptor">Stories</a>
+          <a href="stories.html" class="footer-descriptor">Stories</a>
         </div>
       </footer>
     </section>
@@ -143,7 +143,6 @@
         text-align: center;
         position: relative;
       }
-
       .left-button-stories{
         text-align: right;
         margin: auto 0;
@@ -177,6 +176,7 @@
         text-align: center;
       }
     </style>
+    <script src="js/youth.js" charset="utf-8"></script>
     <script type="text/javascript">
     $(".button").click(function() {
        $(".button span").html($(".button span").html() == 'followed' ? 'follow' : 'followed');
