--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@
       <div class="nav-buttons">
         <a href="#">shop</a>
         <a href="stories.html">stories</a>
-        <a href="#">about</a>
+        <a href="about.html">about</a>
         <a href="#">profile</a>
       </div>
       <div id="menu" class="burgerMenu"  align="right">
@@ -29,7 +29,7 @@
           <div class="stacked-buttons">
             <a href="#">shop</a>
             <a href="stories.html">stories</a>
-            <a href="#">about</a>
+            <a href="about.html">about</a>
             <a href="#">profile</a>
           </div>
         </div>
