--- a/article.html
+++ b/article.html
@@ -277,6 +277,19 @@
       }
       .story{
       }
+      @media only screen and (max-width: 1025px) {
+        .article-section2{
+          padding: 5%;
+        }
+        .article{
+          max-width: 100%;
+          width: 100%;
+          font-size: 5vh;
+          text-align: justify;
+          justify-content: center;
+          line-height: 8vh;
+        }
+      }
 
     </style>
 
