--- a/article.html
+++ b/article.html
@@ -38,8 +38,8 @@
     </nav>
 
     <section class="article-section1" style="">
-      <div class="welcome-story">
-        <div class="stories-welcome">
+      <div class="welcome-article">
+        <div class="article-welcome">
           <span class="big-message">Upcoming young talent in music</span> <br>
           <span class="small-message"> <i>Jon Doe - 20 Feb 2020</i></span>
           <div class="btnGo">
@@ -201,99 +201,5 @@
         <a href="stories.html" class="footer-descriptor">Stories</a>
       </div>
     </footer>
-    <style media="screen">
-      .article-section1{
-        color: #FFF;
-      text-align: center;
-      height: 600px;
-      width: 100%;
-      overflow: hidden;
-      position: relative;
-      background-image: url('img/rasta.jpg');
-      background-size: cover;
-      position: relative;
-      }
-      .welcome-story{
-        position: absolute;
-        z-index: 2;
-        height: 600px;
-        width: 100%;
-        top: 0;
-      }
-      .stories-welcome{
-        width: 100%;
-        padding: 450px 20%;
-        height: 100%;
-        text-align: left;
-        position: relative;
-        background: rgba(0, 0, 0, 0.5);
-      }
-      footer{
-        position: relative;
-        width: 100%;
-        bottom: 0;
-      }
-      .article-section2{
-        padding: 5% 35% 2% 10%;
-      }
-      .article{
-        max-width: 1000px;
-        font-size: 20px;
-        text-align: justify;
-        justify-content: center;
-        line-height: 35px;
-      }
-      .like-share-holder{
-        margin: 50px 0;
-      }
-      .like-share-buttons{
-        display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(70px, 1fr));
-      }
-      .like{
-        width: 50px;
-        position: relative;
-      }
-      .like img{
-        width: 50px;
-        transition: all 0.2s ease;
-        cursor: pointer;
-      }
-      .like img:hover{
-        width: 50px;
-        transform: scale(1.1);
-      }
-      .counter{
-        position: absolute;
-        margin: 0;
-        left: 50%;
-        -ms-transform: translate(-50%, -50%);
-        transform: translate(-50%, -50%);
-        top: 40%;
-        color: white;
-        font-size: 12px;
-      }
-      .btn_wrap{
-      }
-      .story{
-      }
-      @media only screen and (max-width: 1025px) {
-        .article-section2{
-          padding: 5%;
-        }
-        .article{
-          max-width: 100%;
-          width: 100%;
-          font-size: 5vh;
-          text-align: justify;
-          justify-content: center;
-          line-height: 8vh;
-        }
-      }
-
-    </style>
-
-
-
   </body>
 </html>
