--- a/stories.html
+++ b/stories.html
@@ -49,7 +49,7 @@
       </div>
       <img src="img/swave.svg" alt="">
     </section>
-    <section class="third-section" style="">
+    <section class="third-section two" style="">
       <!--<img class="third-background" src="img/wave.svg" alt="">-->
       <div class="third-holder">
         <div class="medium-label" align="left" id="blue-label">
@@ -94,7 +94,7 @@
         </div>
 
       </div>
-      <footer>
+      <footer class="footer">
         <div class="" id="large">
           <span class="footer-descriptor">&copy; Yiaz logo</span>
         </div>
@@ -116,71 +116,7 @@
         </div>
       </footer>
     </section>
-    <style media="screen">
-      .one{
-        color: #FFF;
-      text-align: center;
-      height: 600px;
-      width: 100%;
-      overflow: hidden;
-      position: relative;
-      background-image: url('img/urban.jpg');
-      background-size: cover;
-      position: relative;
-      }
-      .one img{
-        position: absolute;
-        top: 250px;
-        left: 0;
-        z-index: 2;
-        height: 100%;
-        width: 100%;
-      }
-      .stories-welcome{
-        width: 100%;
-        padding: 200px 30px;
-        height: 100%;
-        text-align: center;
-        position: relative;
-      }
-      .left-button-stories{
-        text-align: right;
-        margin: auto 0;
-      }
-      .topNew{
-        display: inline-block;
-        border: 1px solid rgb(30,28,50);
-        border-radius: 10px;
-        overflow: hidden;
-      }
-      .topNew span{
-        display: inline-block;
-        width 50%;
-        padding: 10px 20px;
-      }
-      /*
-      if new is chosen
-      */
-      #orderBynew{
-        background-color: rgb(30,28,50);
-        color: #dedede;
-      }
-      #orderBytop{
-        color: #dedede;
-      }
-      footer{
-        background-image: url('img/footer_wave.svg');
-        background-size: cover;
-      }
-      .third-section{
-        text-align: center;
-      }
-    </style>
     <script src="js/youth.js" charset="utf-8"></script>
-    <script type="text/javascript">
-    $(".button").click(function() {
-       $(".button span").html($(".button span").html() == 'followed' ? 'follow' : 'followed');
-    });
-    </script>
+
   </body>
 </html>
