--- a/article.html
+++ b/article.html
@@ -202,4 +202,17 @@
       </div>
     </footer>
   </body>
+  <style media="screen">
+  .article-section1{
+      color: #FFF;
+    text-align: center;
+    height: 600px;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    background-image: url('img/rasta.jpg');
+    background-size: cover;
+    position: relative;
+    }
+  </style>
 </html>
