--- a/index.html
+++ b/index.html
@@ -1,68 +1,276 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en" dir="ltr">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Youth In Action Zim</title>
-    <meta name="description" content="Demo of the upcoming Youth in action Zim website."/>
-    <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="styles/main.css" rel="stylesheet">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Condensed:wght@300&family=Heebo&display=swap" rel="stylesheet">
+    <title>Youth in action Zim</title>
+    <link href="css/youth.css" rel="stylesheet">
   </head>
-  <body id="top"><div class="site-wrapper">
-  <div class="site-wrapper-inner">
-    <div class="cover-container">
-      <div class="masthead clearfix">
-        <div class="inner">
-          <h3 class="masthead-brand">Coming Soon</h3>
-          <nav class="nav nav-masthead">
-            website under construction
-          </nav>
-        </div>
-      </div><br>      <div class="inner cover">
-        <h1 class="cover-heading">youth in action zim</h1>
-        <p class="lead cover-copy">Hold tight as we get our working robots together and produce the most astonishing product ever.</p>
-        <p class="lead"><a  class="btn btn-lg btn-default btn-notify"  href="progress.html">Check progress</a></p>
+  <body>
+    <nav>
+      <div class="logo">
+        Yiaz logo
       </div>
-      <div class="mastfoot">
-        <div class="inner">
-          <img src="img/white-dime.svg" alt="" style="width: 100px;">
-          <style media="screen">
-            .inner img{
-            }
-          </style>
+      <div class="nav-buttons">
+        <a href="#">shop</a>
+        <a href="stories.html">stories</a>
+        <a href="about.html">about</a>
+        <a href="#">profile</a>
+      </div>
+      <div id="menu" class="burgerMenu"  align="right">
+        <div id="burger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+        <div class="stacked-nav-wrapper" id="nav_wrapper">
+          <div class="stacked-buttons">
+            <a href="#">shop</a>
+            <a href="stories.html">stories</a>
+            <a href="about.html">about</a>
+            <a href="#">profile</a>
+          </div>
+        </div>
+
+      </div>
+
+    </nav>
+    <style media="screen">
+
+
+    </style>
+    <script type="text/javascript">
+
+    </script>
+    <!--
+    <nav>
+      <div class="logo">
+        <h4>the nav</h4>
+      </div>
+      <ul class="nav-links">
+        <li>
+          <a href="#">home</a>
+        </li>
+        <li>
+          <a href="#">about</a>
+        </li>
+        <li>
+          <a href="#">stories</a>
+        </li>
+      </ul>
+      <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+    </nav>
+-->
+
+    <section class="first-section">
+      <img src="img/happy.jpg" alt="">
+      <div class="welcome">
+        <div class="welcome-message">
+          <span class="big-message">The voice of youth</span> <br>
+          <span class="small-message">Persons of Distinction do not fear failure, but rather learn from it</span>
+          <div class="btnGo">
+          </div>
+        </div>
+
+      </div>
+
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#fbfbfb" fill-opacity="1" d="M0,160L48,133.3C96,107,192,53,288,69.3C384,85,480,171,576,192C672,213,768,171,864,176C960,181,1056,235,1152,250.7C1248,267,1344,245,1392,234.7L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+        </path>
+      </svg>
+      <div class="btnGo" align="center">
+        <a class="btn" href="#second-section">Let's Go!</a> <br>
+        <div class="arrow" align="center">
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
       </div>
-      <div class="modal fade" id="subscribeModal" tabindex="-1" role="dialog" aria-labelledby="subscribeModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="subscribeModalLabel">Get Notified on Launch:</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
+
+    </section>
+    <section class="second-section" id="second-section">
+      <div class="left-section">
+        <img class="left-image" src="img/man.png" alt=""> <br>
+        <div class="" align = "right">
+          <a href="#" class="btnAbout">
+            <span class="btnTxt">About us</span>
+            <img id="white-arrow" src="img/w-right-arrow.svg" alt="">
+          </a>
+        </div>
+      </div>
+      <div class="right-section" align="left">
+        <span class="bigText" style="position: relative;">Develop</span>
+        <span class="medText">Developing future leaders</span> <br>
+        <span class="smallText">
+          Youth in action Zim shapes the minds of young Zimbabwe people into people who are self dependent, confident and
+           can set achievable proffessional goals.
+        </span> <br>
+
+        <span class="smallText" >
+            The youth in Zimbabwe are:
+        </span>
+        <div class="smallText" >
+            <div class="dot1"></div> <span>Inteligent</span>
+        </div>
+        <div class="smallText" >
+            <div class="dot2"></div> <span>Cultured</span>
+        </div>
+        <div class="smallText" >
+            <div class="dot3"></div> <span>Innovative</span>
+        </div>
+        <span class="smallText" >
+            These are qualities that need nurtured and cultivated
+        </span>
+      </div>
+      <style media="screen">
+
+
+      </style>
+    </section>
+    <section class="third-section" style="background-image: url('img/wave.svg'); background-size: cover;">
+      <!--<img class="third-background" src="img/wave.svg" alt="">-->
+      <div class="third-holder">
+        <div class="medium-label" align="left" id="blue-label">
+          <div class="right-label">
+            <span class="bold-label">Top</span> &nbsp;<span class="regular-label">Stories</span>
+          </div>
+          <div class="center-nothing">
+          </div>
+          <div class="left-button">
+            <a class="blue-more" href="#">
+              <span>More Top Stories</span>
+              <img id="white-arrow" src="img/w-right-arrow.svg" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="top-news" >
+          <div class="big-card" id="card1">
+            <div class="card-overlay" align="left">
+              <span class="medium-title">Upcoming young talent in music</span>
             </div>
-            <div class="modal-body">
-              <form>
-                <div class="form-group">
-                  <label for="recipient-name" class="form-control-label">Enter you e-mail to get notified when we launch</label>
-                  <input type="text" class="form-control" id="recipient-name" placeholder="your-name@example.com">
-                </div>
-              </form>
+              <img class="card-image" src="img/rasta.jpg" alt="">
+          </div>
+          <div class="small-card" id="card2">
+            <div class="card-overlay" align="left">
+              <span class="small-title">Work for your goal </span>
             </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default">Subscribe</button>
+            <img class="card-image" src="img/shoes.jpg" alt="">
+          </div>
+          <div class="small-card" id="card3">
+            <div class="card-overlay" align="left">
+              <span class="small-title">Involve youth in politics</span>
+            </div>
+            <img class="card-image" src="img/barry.jpg" alt="">
+          </div>
+
+        </div>
+        <div id="left-button">
+          <a class="blue-more" href="#">
+            <span>More Top Stories</span>
+            <img id="white-arrow" src="img/w-right-arrow.svg" alt="">
+          </a>
+        </div>
+        <div class="medium-label" align="left" id="white-label">
+          <div class="right-label">
+            <span class="bold-label">New</span> &nbsp;<span class="regular-label">Stories</span>
+          </div>
+          <div class="center-nothing">
+          </div>
+          <div class="left-button">
+            <a class="white-more" href="#">
+              <span>More New Stories</span>
+              <img id="white-arrow" src="img/b-right-arrow.svg" alt="">
+            </a>
+          </div>
+        </div>
+        <div class="new-stories">
+          <div class="tiny-card">
+            <div class="tiny-overlay" align="left">
+              <span class="tiny-title">How to be happy always</span>
+            </div>
+            <img class="card-image" src="img/jump.jpg" alt="">
+          </div>
+
+          <div class="tiny-card">
+            <div class="tiny-overlay" align="left">
+              <span class="tiny-title">Invest in your mind</span>
+            </div>
+            <img class="card-image" src="img/you.jpg" alt="">
+          </div>
+
+          <div class="tiny-card">
+            <div class="tiny-overlay" align="left">
+              <span class="tiny-title">Educate vulnerable girls</span>
+            </div>
+            <img class="card-image" src="img/girl.jpg" alt="">
+          </div>
+        </div>
+        <div id="left-button">
+          <a class="white-more" href="#">
+            <span>More New Stories</span>
+            <img id="white-arrow" src="img/b-right-arrow.svg" alt="">
+          </a>
+        </div>
+        <div class="share" align="center">
+          <div class="descriptor">
+            <span class="small-descriptor">You can help you know!</span>
+            <span class="tiny-descriptor">Spread the word. Let the world know about us</span>
+          </div>
+          <div class="share-btn" align="center">
+            <div class="btn_wrap">
+              <span class="btn-descriptor">Share</span>
+              <div class="container">
+                <a class="social-media" target="_blank"  href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fclinsm.github.io%2Fyiaz%2F&amp;src=sdkpreparse">
+                  <img src="img/facebook.svg" alt="fb">
+                </a>
+                <a class="social-media" target="_blank"  href="https://www.instagram.com">
+                  <img src="img/instagram.svg" alt="insta">
+                </a>
+                <a class="social-media" target="_blank" href="https://twitter.com/share?ref_src=twsrc%5Etfw">
+                  <img src="img/twitter.svg" alt="tweet">
+                </a>
+                <a class="social-media" target="_blank"  href="https://www.tumblr.com">
+                  <img src="img/tumblr.svg" alt="tumblr">
+                </a>
+              </div>
             </div>
           </div>
         </div>
-    </div>
-  </div>
-</div>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
-    <script src="scripts/main.js"></script>
+      </div>
+      <footer>
+        <div class="" id="large">
+          <span class="footer-descriptor">&copy; Yiaz logo</span>
+        </div>
+
+        <div class="" id="nothing">
+          <span></span>
+        </div>
+        <div class="footer-card">
+          <a href="#" class="footer-descriptor">Home</a>
+        </div>
+        <div class="footer-card">
+          <a href="#" class="footer-descriptor">Shop</a>
+        </div>
+        <div class="footer-card">
+          <a href="#" class="footer-descriptor">About</a>
+        </div>
+        <div class="footer-card">
+          <a href="#" class="footer-descriptor">Stories</a>
+        </div>
+      </footer>
+    </section>
+    <style media="screen">
+    /*test
+
+    */
+    </style>
+    <script src="js/youth.js" charset="utf-8"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
   </body>
 </html>
