--- a/stories.html
+++ b/stories.html
@@ -117,6 +117,18 @@
       </footer>
     </section>
     <script src="js/youth.js" charset="utf-8"></script>
-
+<style media="screen">
+.one{
+  color: #FFF;
+text-align: center;
+height: 600px;
+width: 100%;
+overflow: hidden;
+position: relative;
+background-image: url('img/urban.jpg');
+background-size: cover;
+position: relative;
+}
+</style>
   </body>
 </html>
