--- a/article.html
+++ b/article.html
@@ -40,8 +40,8 @@
     <section class="article-section1" style="">
       <div class="welcome-article">
         <div class="article-welcome">
-          <span class="big-message">Upcoming young talent in music</span> <br>
-          <span class="small-message"> <i>Jon Doe - 20 Feb 2020</i></span>
+          <span class="big-message big-article">Upcoming young talent in music</span> <br>
+          <span class="small-message small article"> <i>Jon Doe - 20 Feb 2020</i></span>
           <div class="btnGo">
           </div>
         </div>
@@ -215,4 +215,5 @@
     position: relative;
     }
   </style>
+  <script src="js/youth.js" charset="utf-8"></script>
 </html>
