--- a/about.html
+++ b/about.html
@@ -14,10 +14,10 @@
         Yiaz logo
       </div>
       <div class="nav-buttons">
-        <a href="#">shop</a>
+        <a href="shop.html">shop</a>
         <a href="stories.html">stories</a>
         <a href="about.html">about</a>
-        <a href="#">profile</a>
+        <a href="profile.html">profile</a>
       </div>
       <div id="menu" class="burgerMenu"  align="right">
         <div id="burger">
@@ -27,10 +27,10 @@
         </div>
         <div class="stacked-nav-wrapper" id="nav_wrapper">
           <div class="stacked-buttons">
-            <a href="#">shop</a>
+            <a href="shop.html">shop</a>
             <a href="stories.html">stories</a>
-            <a href="#">about</a>
-            <a href="#">profile</a>
+            <a href="about.html">about</a>
+            <a href="profile.html">profile</a>
           </div>
         </div>
 
@@ -43,11 +43,115 @@
         <span>young african</span><span>girl child</span><span>protect</span>
         <span>future</span><span>legacy</span><span>hope</span>
       </div>
-      <div class="welcome-story">
-        <div class="stories-welcome">
+      <div class="welcome-about">
+        <div class="about-welcome">
           <span class="big-message">About Us</span> <br>
           <span class="small-message">The story of who we are, what drives us. Where we are going.</span>
 
+        </div>
+      </div>
+    </section>
+    <section class="about-section2">
+      <div class="about-article">
+        <h1>About the organisation</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+           sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+           quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+           Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+           Excepteur sint occaecat cupidatat non proident,
+           sunt in culpa qui officia deserunt mollit anim id est laborum.
+           <br> <br>
+           Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+              sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+              Excepteur sint occaecat cupidatat non proident,
+              sunt in culpa qui officia deserunt mollit anim id est laborum.
+         </p>
+
+      </div>
+      <div class="simple-topic">
+        <span> <h1>The team</h1> </span>
+      </div>
+      <div class="team">
+        <div class="member" align="center">
+          <img class="member-img" src="img/member1.jpg" alt=""> <br>
+          <div class="name">
+            <span>Jane Doe</span>
+          </div>
+          <div class="description">
+            <span>The CEO</span>
+          </div>
+        </div>
+        <div class="member" align="center">
+          <img class="member-img" src="img/member2.jpg" alt=""> <br>
+          <div class="name">
+            <span>James Dloe</span>
+          </div>
+          <div class="description">
+            <span>IT Guy</span>
+          </div>
+        </div>
+        <div class="member" align="center">
+          <img class="member-img" src="img/member3.jpg" alt=""> <br>
+          <div class="name">
+            <span>Doeline Tomb</span>
+          </div>
+          <div class="description">
+            <span>Humanitarian Operative</span>
+          </div>
+        </div>
+        <div class="member" align="center">
+          <img class="member-img" src="img/member4.jpg" alt=""> <br>
+          <div class="name">
+            <span>Zane Libambo</span>
+          </div>
+          <div class="description">
+            <span>Event organiser</span>
+          </div>
+        </div>
+        <div class="member" align="center">
+          <img class="member-img" src="img/member5.jpg" alt=""> <br>
+          <div class="name">
+            <span>Scoda Don</span>
+          </div>
+          <div class="description">
+            <span>Marketing Head</span>
+          </div>
+        </div>
+        <div class="member" align="center">
+          <img class="member-img" src="img/member6.jpg" alt=""> <br>
+          <div class="name">
+            <span>Spencer Shona</span>
+          </div>
+          <div class="description">
+            <span>Accounting Head</span>
+          </div>
+        </div>
+      </div>
+      <div class="simple-topic">
+        <span> <h1>Our Partners</h1> </span>
+      </div>
+      <div class="partners">
+        <img src="img/EconetLogo.svg" alt="Econet">
+        <img src="img/spar.png" alt="Spar">
+        <img src="img/ok.png" alt="OK">
+      </div>
+      <div class="contact">
+        <div class="call">
+          <span>Give us a ring</span> <br>
+          <span>Phone: 0776871294</span>
+        </div>
+        <div class="email">
+          <span>Email us</span> <br>
+          <span>Email: info@youthinactionzim.co.zw</span>
+        </div>
+        <div class="address">
+          <span>Or pay us a visit</span> <br>
+          <span>12 Union House,</span><br>
+          <span>14 Melbourne street,</span><br>
+          <span>Rewa Park, Harare.</span><br>
+          <span>Zimbabwe</span>
         </div>
       </div>
     </section>
@@ -60,118 +164,18 @@
         <span></span>
       </div>
       <div class="footer-card">
-        <a href="#" class="footer-descriptor">Home</a>
+        <a href="index.html" class="footer-descriptor">Home</a>
       </div>
       <div class="footer-card">
-        <a href="#" class="footer-descriptor">Shop</a>
+        <a href="shop.html" class="footer-descriptor">Shop</a>
       </div>
       <div class="footer-card">
-        <a href="#" class="footer-descriptor">About</a>
+        <a href="about.html" class="footer-descriptor">About</a>
       </div>
       <div class="footer-card">
         <a href="stories.html" class="footer-descriptor">Stories</a>
       </div>
     </footer>
   </body>
-<style media="screen">
-  .article-section1{
-    color: #FFF;
-  text-align: center;
-  height: 600px;
-  width: 100%;
-  overflow: hidden;
-  position: relative;
-  background-image: url('img/rasta.jpg');
-  background-size: cover;
-  position: relative;
-  }
-  .welcome-story{
-    position: absolute;
-    z-index: 2;
-    height: 600px;
-    width: 100%;
-    top: 0;
-  }
-  .stories-welcome{
-    width: 100%;
-    padding: 150px 20%;
-    height: 100%;
-    text-align: center;
-    position: relative;
-    background: rgba(0, 0, 0, 0.5);
-
-  }
-  .stories-welcome span:nth-child(1){
-    font-size: 100px;
-  }
-  .background-words{
-    position: absolute;
-    background: black;
-    height: 100%;
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(70px, 1fr));
-  }
-  .background-words span:nth-child(1){
-    font-size: 100px;
-    font-weight: bold;
-    grid-row: span 1 / 3;
-    opacity: 0.1;
-  }
-  .background-words span:nth-child(2){
-    font-size: 50px;
-    font-weight: bold;
-    opacity: 0.3;
-  }
-  .background-words span:nth-child(3){
-    font-size: 50px;
-    font-weight: bold;
-    opacity: 0.2;
-  }
-  .background-words span:nth-child(4){
-    font-size: 200px;
-    font-weight: bold;
-    opacity: 0.25;
-    grid-row: span 5 / 7;
-    line-height: 120px;
-  }
-  /*Zim*/
-  .background-words span:nth-child(5){
-    font-size: 70px;
-    font-weight: bold;
-    opacity: 0.15;
-  }.background-words span:nth-child(6){
-    font-size: 50px;
-    font-weight: bold;
-    opacity: 0.2;
-  }.background-words span:nth-child(7){
-    font-size: 120px;
-    font-weight: bold;
-    opacity: 0.08;
-  }.background-words span:nth-child(8){
-    font-size: 80px;
-    font-weight: bold;
-    opacity: 0.2;
-    grid-row: span 3 / 4;
-  }.background-words span:nth-child(9){
-    font-size: 150px;
-    font-weight: bold;
-    opacity: 0.2;
-  }.background-words span:nth-child(10){
-    font-size: 60px;
-    font-weight: bold;
-    opacity: 0.27;
-    grid-row: span 7 / 8;
-  }.background-words span:nth-child(11){
-    font-size: 50px;
-    font-weight: bold;
-    opacity: 0.2;
-  }.background-words span:nth-child(12){
-    font-size: 250px;
-    font-weight: bold;
-    opacity: 0.1;
-    grid-row: span 1 / 3;
-  }
-</style>
-
+<script src="js/youth.js" charset="utf-8"></script>
 </html>
