--- a/article.html
+++ b/article.html
@@ -14,10 +14,10 @@
         Yiaz logo
       </div>
       <div class="nav-buttons">
-        <a href="#">shop</a>
+        <a href="shop.html">shop</a>
         <a href="stories.html">stories</a>
         <a href="about.html">about</a>
-        <a href="#">profile</a>
+        <a href="profile.html">profile</a>
       </div>
       <div id="menu" class="burgerMenu"  align="right">
         <div id="burger">
@@ -27,10 +27,10 @@
         </div>
         <div class="stacked-nav-wrapper" id="nav_wrapper">
           <div class="stacked-buttons">
-            <a href="#">shop</a>
+            <a href="shop.html">shop</a>
             <a href="stories.html">stories</a>
-            <a href="#">about</a>
-            <a href="#">profile</a>
+            <a href="about.html">about</a>
+            <a href="profile.html">profile</a>
           </div>
         </div>
 
@@ -214,7 +214,6 @@
     background-size: cover;
     position: relative;
     }
-    
   </style>
   <script src="js/youth.js" charset="utf-8"></script>
 </html>
