--- a/profile.html
+++ b/profile.html
@@ -271,32 +271,7 @@
         <a href="stories.html" class="footer-descriptor">Stories</a>
       </div>
     </footer>
-
-
-    <style media="screen">
-
-    </style>
-    <script type="text/javascript">
-     google.charts.load("current", {packages:["corechart"]});
-     google.charts.setOnLoadCallback(drawChart);
-     function drawChart() {
-       var data = google.visualization.arrayToDataTable([
-         ['Task', 'Hours per Day'],
-         ['member',      2],
-         ['Admin',  1],
-         ['Blogger', 1],
-         ['regular user', 1]
-       ]);
-
-       var options = {
-         title: 'User accounts',
-         pieHole: 0.6,
-       };
-
-       var chart = new google.visualization.PieChart(document.getElementById('donutchart'));
-       chart.draw(data, options);
-     }
-   </script>
+    <script src="js/youth.js" charset="utf-8"></script>
 
   </body>
 
