--- a/shop.html
+++ b/shop.html
@@ -70,7 +70,7 @@
             </div>
           </div>
           <div class="product-image">
-            <img src="img/soap.jpg" alt="item1">
+            <img src="img/shoes.jpg" alt="item1">
           </div>
           <div class="product-details">
             <span>Product A</span> <br>
